Add java lambda kata solutions