@@ -53,17 +53,11 @@ public class FunctionalInterfaceTest
         var strings = List.of("one", "two", "three");
 
         // TODO - Can you remove the final keyword from the variable below?
-        final var result = new ArrayList<String>();
+        var result = new ArrayList<String>();
 
         // TODO - Convert the anonymous inner class to a lambda
-        var consumer = new Consumer<String>()
-        {
-            @Override
-            public void accept(String each)
-            {
-                result.add(each.toUpperCase());
-            }
-        };
+        Consumer<String> consumer = (String x) -> result.add(x.toUpperCase());
+        // Also works: strings.forEach((String x) -> result.add(x.toUpperCase()));
         consumer.accept("zero");
         Assertions.assertEquals(List.of("ZERO"), result);
         strings.forEach(consumer);
@@ -73,17 +67,10 @@ public class FunctionalInterfaceTest
     @Test
     public void predicateIsEven()
     {
-        var numbers = IntStream.rangeClosed(1, 10).boxed().collect(Collectors.toList());
+        var numbers = IntStream.rangeClosed(1, 10).boxed().toList();
 
         // TODO - Convert the anonymous inner class to a lambda
-        var evenPredicate = new Predicate<Integer>()
-        {
-            @Override
-            public boolean test(Integer integer)
-            {
-                return integer % 2 == 0;
-            }
-        };
+        Predicate<Integer> evenPredicate = (Integer x) -> x % 2 == 0;
         Assertions.assertTrue(evenPredicate.test(2));
         Assertions.assertFalse(evenPredicate.test(1));
         var evens = numbers.stream().filter(evenPredicate).collect(Collectors.toList());
@@ -96,7 +83,7 @@ public class FunctionalInterfaceTest
     @Test
     public void predicateIsOdd()
     {
-        var numbers = IntStream.rangeClosed(1, 10).boxed().collect(Collectors.toList());
+        var numbers = IntStream.rangeClosed(1, 10).boxed().toList();
 
         // TODO - Convert the anonymous inner class to a lambda
         var oddPredicate = new Predicate<Integer>()
@@ -120,14 +107,7 @@ public class FunctionalInterfaceTest
     public void function()
     {
         // TODO - Convert the anonymous inner class to a lambda and then a method reference
-        var toUppercase = new Function<String, String>()
-        {
-            @Override
-            public String apply(String s)
-            {
-                return s.toUpperCase();
-            }
-        };
+        Function<String, String> toUppercase = String::toUpperCase;
         Assertions.assertEquals("UPPERCASE", toUppercase.apply("uppercase"));
         List<String> lowercase = List.of("a", "b", "c", "d");
         Set<String> uppercase = lowercase.stream().map(toUppercase).collect(Collectors.toSet());
@@ -138,14 +118,7 @@ public class FunctionalInterfaceTest
     public void supplier()
     {
         // TODO - Convert this anonymous inner class to a lambda and then to a constructor reference
-        var supplier = new Supplier<List<String>>()
-        {
-            @Override
-            public List<String> get()
-            {
-                return new CopyOnWriteArrayList<String>();
-            }
-        };
+        Supplier<List<String>> supplier = CopyOnWriteArrayList::new;
         Assertions.assertEquals(new CopyOnWriteArrayList<>(), supplier.get());
         Assertions.assertNotSame(supplier.get(), supplier.get());
         List<String> list = Stream.of("1", "2", "3").collect(Collectors.toCollection(supplier));
@@ -157,14 +130,8 @@ public class FunctionalInterfaceTest
     {
         var result = new HashMap<String, String>();
         // TODO - Convert the anonymous inner class to a lambda
-        var biConsumer = new BiConsumer<String, String>()
-        {
-            @Override
-            public void accept(String key, String value)
-            {
-                result.put(key.toUpperCase(), value.toUpperCase());
-            }
-        };
+        BiConsumer<String, String> biConsumer = (String key, String value) -> result.put(key.toUpperCase(), value.toUpperCase());
+        BiConsumer<String, String> biConsumer2 = result::put;
         biConsumer.accept("a", "one");
         Assertions.assertEquals(Map.of("A", "ONE"), result);
 
@@ -179,26 +146,12 @@ public class FunctionalInterfaceTest
     public void unaryOperator()
     {
         // TODO - Convert the anonymous inner class to a lambda
-        var squared = new UnaryOperator<Integer>()
-        {
-            @Override
-            public Integer apply(Integer integer)
-            {
-                return integer * integer;
-            }
-        };
+        UnaryOperator<Integer> squared = (Integer x) -> x * x;
         Assertions.assertEquals(Integer.valueOf(4), squared.apply(2));
         Assertions.assertEquals(Integer.valueOf(9), squared.apply(3));
         Assertions.assertEquals(Integer.valueOf(16), squared.apply(4));
 
         // TODO - Convert the anonymous inner class to a lambda
-        Assertions.assertTrue(Stream.iterate(2, squared).anyMatch(new Predicate<Integer>()
-        {
-            @Override
-            public boolean test(Integer i)
-            {
-                return i.equals(Integer.valueOf(256));
-            }
-        }));
+        Assertions.assertTrue(Stream.iterate(2, squared).anyMatch(x -> x.equals(256)));
     }
 }
